--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.1.0"
     implementation "androidx.camera:camera-lifecycle:1.1.0"
     implementation "androidx.camera:camera-view:1.0.0-alpha28"
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
 
     implementation("com.google.guava:guava:30.1.1-android")
 
