--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,12 +51,15 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.2.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'org.tensorflow:tensorflow-lite:2.5.0'
-    implementation "androidx.camera:camera-core:1.1.0"
-    implementation "androidx.camera:camera-camera2:1.1.0"
+//    implementation "androidx.camera:camera-core:1.1.0"
+//    implementation "androidx.camera:camera-camera2:1.1.0"
     implementation "androidx.camera:camera-lifecycle:1.1.0"
     implementation "androidx.camera:camera-view:1.0.0-alpha28"
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'org.tensorflow:tensorflow-lite:2.5.0'
+    implementation "androidx.camera:camera-camera2:1.1.0"
+
+
 
     implementation("com.google.guava:guava:30.1.1-android")
 
